# pysaml2

./: .gitignore  .travis.yml  README.rst  setup.cfg  tox.ini
src/saml2/: __init__.py  client.py  client_base.py  ecp_client.py  entity.py  mdstore.py  pack.py  request.py  saml.py  server.py  sigver.py  soap.py  validate.py
src/saml2/cryptography/: symmetric.py
src/saml2/xml/schema/: __init__.py
tests/: test_30_mdstore.py  test_30_mdstore_old.py  test_42_enc.py  test_51_client.py  test_60_sp.py  test_xmlsec1_key_data.py  test_xsw.py
