[metadata]
name = pysaml2
version = file:VERSION
author = IdentityPython
author-email = discuss@idpy.org
maintainer = IdentityPython
maintainer-email = discuss@idpy.org
license = Apache License Version 2.0
license-file = LICENSE
description = Python implementation of SAML Version 2 Standard
long-description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
home-page = https://idpy.org
project_urls =
    Bug Tracker = https://github.com/IdentityPython/pysaml2/issues
    Documentation = https://pysaml2.readthedocs.io
    Source Code = https://github.com/IdentityPython/pysaml2
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
requires-dist = setuptools
keywords =
    saml
    saml2
    standard
    federation
    idpy
    IdentityPython


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
scripts =
    tools/make_metadata.py
    tools/mdexport.py
    tools/merge_metadata.py
    tools/parse_xsd2.py
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*', !=3.3.*', !=3.4.*', !=3.5.*', <4
install_requires =
    cryptography >= 1.4; python_version > '2.7'
    cryptography <= 3.3.2; python_version == '2.7'
    defusedxml
    pyOpenSSL
    python-dateutil
    pytz
    requests >= 1.0.0
    six
    importlib_resources; python_version == '3.6'
    importlib_resources; python_version == '3.7'
    importlib_resources; python_version == '3.8'
    importlib_resources <= 3.3.1; python_version == '2.7'
    xmlschema >= 1.2.1; python_version > '2.7'
    xmlschema <= 1.0.18; python_version == '2.7'


[options.packages.find]
where = src
include =
    saml2
    saml2.*


[options.package_data]
* =
    *.xml
    *.xsd


[options.extras_require]
s2repoze =
    paste
    zope.interface
    repoze.who


[bdist_wheel]
universal = 1


[tool:pytest]
markers =
    mongo: marks tests that need mongodb


[flake8]
max-line-length = 120
author-attribute = forbidden
no-accept-encodings = True
assertive-snakecase = True
# assertive-test-pattern = <fnmatch>
inline-quotes = "
multiline-quotes = """
docstring-quotes = """
application-import-names = saml2

hang_closing = false
doctests = false
max-complexity = 10
exclude =
    .git
    __pycache__
    docs/source/conf.py
    build
    dist
